<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grisfondo"
            android:orientation="vertical"
            android:padding="18dp"
            tools:context=".MainActivity">

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/botonGoogle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/logogoogleassistant"
                    android:scaleType="center"/>

                <Button
                    android:id="@+id/botonTiempo"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/txvTiempo"
                    android:background="@drawable/nubestiempo"
                    android:scaleType="center"/>
                <TextView
                    android:id="@+id/txvTiempo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiempo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/textoPrincipal1"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoPrincipal2"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/CVbotonNavigate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/white">

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:src="@drawable/ubicacionlogo"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textoBotonNavegar"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="23dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="false"/>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/CVbotonCall"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/white">

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:src="@drawable/telefonologo2"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textoBotonCall"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="false"/>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/CVbotonPlay"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/white">

                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/white"
                        android:src="@drawable/logoplaylist"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:clickable="false"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textoBotonPlay"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="38dp"
                        android:layout_marginBottom="15dp"
                        android:clickable="false"/>
                </androidx.cardview.widget.CardView>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/botonImagen"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/fotoperfilnoti"
                    android:scaleType="centerInside"
                    android:backgroundTint="@color/grisfondo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textoPerfilFlotante"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="95dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/boton1"
                        android:layout_width="95dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/borde_redondeado"
                        android:src="@drawable/flechasuelologo"
                        android:scaleType="fitStart"
                        android:padding="23dp"/>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti1texto1"
                        android:textColor="@color/verde"
                        android:textSize="23sp"
                        android:layout_toEndOf="@+id/boton1"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" to Tacolicious"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:layout_toEndOf="@+id/textView1"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti1texto3"
                        android:textColor="@color/grisoscuro"
                        android:textSize="15sp"
                        android:layout_toEndOf="@+id/boton1"
                        android:layout_below="@id/textView1"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/boton2"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_redondeado"
                        android:src="@drawable/fotoperfil"
                        android:scaleType="fitStart"
                        android:padding="20dp"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti2texto1"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:layout_toEndOf="@+id/boton2"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti2texto2"
                        android:textColor="@color/grisoscuro"
                        android:textSize="15sp"
                        android:layout_toEndOf="@+id/boton2"
                        android:layout_below="@id/textView4"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/white">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/boton3"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borde_redondeado"
                        android:src="@drawable/playlogonoti"
                        android:scaleType="fitStart"
                        android:padding="22dp"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti3texto1"
                        android:textColor="@color/black"
                        android:textSize="23sp"
                        android:layout_toEndOf="@+id/boton3"
                        android:layout_marginTop="20dp"/>
                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noti3texto2"
                        android:textColor="@color/grisoscuro"
                        android:textSize="15sp"
                        android:layout_toEndOf="@+id/boton3"
                        android:layout_below="@id/textView6"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="150dp"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <Button
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="10dp"
            android:background="@drawable/logomicro"
            android:scaleType="fitCenter"
            android:layout_gravity="start"/>
        <ImageButton
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="end"
            android:layout_margin="25dp"
            android:background="@drawable/borde_redondeado2"
            android:src="@drawable/logoflecha"
            android:scaleType="centerInside"
            android:padding="2dp"/>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
</RelativeLayout>
